[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Game Objects/background-day.png" type="Texture" id=1]
[ext_resource path="res://Assets/Game Objects/yellowbird-downflap.png" type="Texture" id=2]
[ext_resource path="res://Assets/Game Objects/yellowbird-midflap.png" type="Texture" id=3]
[ext_resource path="res://Assets/Game Objects/yellowbird-upflap.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Bird.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Pipe.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/PipesSpawn.gd" type="Script" id=7]
[ext_resource path="res://Assets/Game Objects/base.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sound Efects/wing.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/UI/Numbers/9.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Numbers/8.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/Numbers/5.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/Numbers/7.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/Numbers/6.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/Numbers/4.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/Numbers/0.png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/Numbers/2.png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/Numbers/1.png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/Numbers/3.png" type="Texture" id=19]
[ext_resource path="res://Scenes/PointsCount.gd" type="Script" id=20]
[ext_resource path="res://Assets/Sound Efects/hit.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Sound Efects/point.ogg" type="AudioStream" id=22]
[ext_resource path="res://Scenes/ParallaxBackground.gd" type="Script" id=23]
[ext_resource path="res://Scenes/BaseHit.gd" type="Script" id=24]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=25]
[ext_resource path="res://Assets/UI/gameover.png" type="Texture" id=26]
[ext_resource path="res://Assets/UI/message.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sound Efects/swoosh.ogg" type="AudioStream" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 25 )

[node name="SprietBackground" type="Sprite" parent="."]
position = Vector2( 144, 256 )
texture = ExtResource( 1 )

[node name="Bird" type="RigidBody2D" parent="."]
position = Vector2( 144, 256 )
mode = 1
gravity_scale = 5.0
script = ExtResource( 5 )
velocity = 250

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bird"]
frames = SubResource( 1 )
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 2 )

[node name="Up" type="Position2D" parent="Bird"]
position = Vector2( 30, -30 )

[node name="Down" type="Position2D" parent="Bird"]
position = Vector2( 0, 40 )

[node name="WingSound" type="AudioStreamPlayer2D" parent="Bird"]
stream = ExtResource( 9 )

[node name="HitSound" type="AudioStreamPlayer2D" parent="Bird"]
stream = ExtResource( 21 )

[node name="PipesSpawn" type="Node2D" parent="."]
position = Vector2( 310, 200 )
script = ExtResource( 7 )

[node name="Pipes" type="Node2D" parent="PipesSpawn"]

[node name="Pipe" parent="PipesSpawn/Pipes" instance=ExtResource( 6 )]
position = Vector2( -500, -5 )

[node name="Pipe2" parent="PipesSpawn/Pipes" instance=ExtResource( 6 )]
position = Vector2( -600, -5 )

[node name="Pipe3" parent="PipesSpawn/Pipes" instance=ExtResource( 6 )]
position = Vector2( -700, -5 )

[node name="Pipe4" parent="PipesSpawn/Pipes" instance=ExtResource( 6 )]
position = Vector2( -800, -5 )

[node name="Pipe5" parent="PipesSpawn/Pipes" instance=ExtResource( 6 )]
position = Vector2( -900, -5 )

[node name="SpawnUp" type="Position2D" parent="PipesSpawn"]
position = Vector2( 0, -75 )

[node name="SpawnDown" type="Position2D" parent="PipesSpawn"]
position = Vector2( 0, 75 )

[node name="Timer" type="Timer" parent="PipesSpawn"]
wait_time = 1.25

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0
script = ExtResource( 23 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 336, 0 )

[node name="SpriteBase" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 144, 456 )
texture = ExtResource( 8 )

[node name="PointsCount" type="Node2D" parent="."]
position = Vector2( 144, 30 )
script = ExtResource( 20 )

[node name="Counter01" type="AnimatedSprite" parent="PointsCount"]
visible = false
position = Vector2( -30, 0 )
frames = SubResource( 6 )

[node name="Counter02" type="AnimatedSprite" parent="PointsCount"]
visible = false
frames = SubResource( 6 )

[node name="Counter03" type="AnimatedSprite" parent="PointsCount"]
visible = false
position = Vector2( 30, 0 )
frames = SubResource( 6 )

[node name="Counter04" type="AnimatedSprite" parent="PointsCount"]
visible = false
position = Vector2( -15, 0 )
frames = SubResource( 6 )

[node name="Counter05" type="AnimatedSprite" parent="PointsCount"]
visible = false
position = Vector2( 15, 0 )
frames = SubResource( 6 )

[node name="PointSound" type="AudioStreamPlayer2D" parent="PointsCount"]
stream = ExtResource( 22 )

[node name="Base" type="StaticBody2D" parent="."]
position = Vector2( 144, 456 )
scale = Vector2( 16.8, 5.6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
shape = SubResource( 5 )

[node name="BaseHit" type="Area2D" parent="."]
position = Vector2( 144, 456 )
scale = Vector2( 16.8, 5.6 )
script = ExtResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseHit"]
shape = SubResource( 5 )

[node name="Gameover" type="Sprite" parent="."]
position = Vector2( 144, 197.5 )
texture = ExtResource( 26 )

[node name="Message" type="Sprite" parent="."]
position = Vector2( 144, 208 )
texture = ExtResource( 27 )

[node name="SwooshSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 28 )

[connection signal="timeout" from="PipesSpawn/Timer" to="PipesSpawn" method="_on_Timer_timeout"]
[connection signal="body_entered" from="BaseHit" to="BaseHit" method="_on_BaseHit_body_entered"]
